Support MySQL runtime functions
Co-authored-by: Raditha Dissanayake <e4c5@users.noreply.github.com>